@@ -489,11 +489,10 @@ typedef struct _dbghelp_functions
 } dbghelp_functions;
 
 
-static bool load_dbghelp_library_if_needed (dbghelp_functions *pDbg)
-{
 #  pragma warning (push)
 #  pragma warning (disable:4706)  
-
+static bool load_dbghelp_library_if_needed (dbghelp_functions *pDbg)
+{
   //@TODO: See codeproject's StackWalker.cpp for the list of locations to
   //search so we get the "enhanced" dbghelp if the user has it but it is not
   //first on the path.
@@ -512,8 +511,9 @@ static bool load_dbghelp_library_if_needed (dbghelp_functions *pDbg)
     && LINK_T (SymInitialize) && LINK_T (StackWalk64) && LINK_T (SymCleanup);
 #  undef LINK
 #  undef LINK_T
-#  pragma warning (pop)
 }
+#  pragma warning (pop)
+
 
 struct frame_state {
   STACKFRAME64 sf;
